fixing some spacing

--- a/sass/foo.casper/_foocasper.scss
+++ b/sass/foo.casper/_foocasper.scss
@@ -2328,6 +2328,12 @@ pre {
 }
 
 
+  .comments-area2 {
+    margin-top: 2rem;
+  }
+
+
+
 /* ==========================================================================
    9. Media Queries 
    ========================================================================== */
